fixed bottom spacing

--- a/style.css
+++ b/style.css
@@ -24,12 +24,11 @@ body {
   background-size: cover;
 }
 
-
 /* MAIN CONTENT */
 .todo-content {
   width: 90%;
   max-width: 600px;
-  margin: auto;
+  margin: 0 auto 30px;
   padding: 20px;
   position: absolute;
   top: 20px;
@@ -97,8 +96,6 @@ body {
   background-color: hsl(235, 24%, 19%);
 }
 
-
-
 .todos-container .main-content ul {
   list-style: none;
 }
@@ -129,6 +126,7 @@ body {
   position: relative;
 }
 
+/* COMPLETED STATE OF TODO ITEM */
 .todos-container .main-content ul .todo-item.completed .main-todo .circle {
   border: none;
 }
@@ -136,10 +134,6 @@ body {
 .todos-container .main-content ul .todo-item.completed .main-todo .todo-name {
   color: hsl(237, 14%, 26%);
   text-decoration: line-through;
-}
-
-.todos-container .main-content ul .todo-item:hover .main-todo .circle {
-  border-color: hsl(192, 100%, 67%);
 }
 
 .todos-container .main-content ul .todo-item.completed .main-todo .circle {
@@ -159,6 +153,12 @@ body {
   border-color: transparent;
 }
 
+/* HOVER STATE OF TODO ITEM */
+.todos-container .main-content ul .todo-item:hover .main-todo .circle {
+  border-color: hsl(192, 100%, 67%);
+}
+
+/* CHECK MARK WHEN TODO IS COMPLETED */
 .todos-container
   .main-content
   ul
@@ -192,14 +192,18 @@ body {
   transform: translateX(10px) rotate(-45deg);
   transform-origin: left bottom;
 }
+/* END CHECK MARK */
 
+/* TODO NAME */
 .todos-container .main-content ul li .todo-name {
   color: hsl(234, 39%, 85%);
   font-weight: 400;
   display: inline-block;
   padding-right: 10px;
 }
+/* END TODO NAME */
 
+/* TODOS FOOTER CONTAINER */
 .todos-container .main-content .todos-footer {
   display: flex;
   justify-content: space-between;
@@ -245,6 +249,7 @@ body {
   font-family: inherit;
   font-size: 16px;
 }
+/* END TODOS FOOTER CONTAINER */
 
 /* MESSAGES TO BE SHOWN WHEN LIST IS EMPTY */
 .todos-container p {
@@ -257,12 +262,16 @@ body {
 
   /* MEDIA QUERIES */
 @media screen and (max-width: 600px) {
+  .todo-content{
+   padding-bottom: 100px;
+  }
+
   .todos-container .main-content .todos-footer .filter {
     position: absolute;
     left: 0;
-    top: 100px;
+    top: 85px;
     width: 100%;
-    margin: auto;
+    margin: 0 auto 30px;
     padding: 20px;
     text-align: center;
     background-color: hsl(235, 24%, 19%);
